# riggle

./: .gitignore  CLAUDE.md  Cargo.toml  flake.nix  justfile  pyproject.toml  readme.md  sync
benches/: riggle_bench.rs
docs/: encode.md  gwas.md  high_level.md  ingestion.md  modules.md  query.md  roadmap_epigenomics.md
scripts/: asymptotic_plot.py  at_scale_bench.sh  at_scale_build.sh  at_scale_build.txt  at_scale_igd.txt  at_scale_igd_2.txt  at_scale_igd_3.txt  at_scale_many.sh  at_scale_many.txt  at_scale_many_2.txt  at_scale_many_3.txt  at_scale_query.sh  at_scale_query.txt  bench_plot.py  eigenbed_score.py  rme_heat.py  scoring.py  stress.sh
src/: bench.rs  lib.rs  main.rs
src/core/: mod.rs
src/fourier/: mod.rs
src/io/: depthstore.rs  header.rs  jump.rs  layer.rs  meta.rs  mmap.rs  mod.rs  parse.rs
src/matrix/: dense.rs  mod.rs  sparse.rs
src/stats/: mod.rs
src/sweep/: index.rs  mod.rs  query.rs
src/tasks/: build.rs  mod.rs  query.rs
