[package]
name = "riggle"
version = "0.1.0"
edition = "2024"

[dependencies]
bitvec = "1.0.1"
clap = { version = "4.6.0", features = ["derive"] }
indicatif = "0.18.4"
memmap2 = "0.9"
rayon = "1.11.0"
rkyv = "0.8.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sprs = "0.11.4"
thiserror = "2.0"
wide = "0.7.33"

[dev-dependencies]
tempfile = "3.10"
